updating some features

--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -44,8 +44,8 @@
             <h1 class="text-2xl font-bold">💊 Medicine Finder</h1>
             <nav>
                 <a href="{% url 'home' %}" class="px-3 hover:text-gray-200">Home</a>
-                <a href="#" class="px-3 hover:text-gray-200">About</a>
-                <a href="#" class="px-3 hover:text-gray-200">Contact</a>
+                <a href="{% url 'about' %}" class="px-3 hover:text-gray-200">About</a>
+                <a href="{% url 'contact' %}" class="px-3 hover:text-gray-200">Contact</a>
                 {% if user.is_authenticated %}
                     <a href="{% url 'logout' %}" class="px-3 hover:text-gray-200">Logout</a>
                 {% else %}
