--- a/core/templates/pharmacy_dashboard.html
+++ b/core/templates/pharmacy_dashboard.html
@@ -44,9 +44,10 @@
             <a href="{% url 'inv' %}" class="bg-yellow-500 hover:bg-yellow-600 text-white py-2 px-4 rounded-lg shadow">
                 📦 Manage Inventory
             </a>
-            <a href="{% url 'map' %}" class="bg-yellow-500 hover:bg-yellow-600 text-white py-2 px-4 rounded-lg shadow">
-                Map
-            </a>
+            <a href="{% url 'update_pharmacy_location' %}" class="bg-blue-500 hover:bg-blue-600 text-white py-2 px-4 rounded-lg shadow">
+    📍 Set Location
+</a>
+
         </div>
     </section>
 </div>
