--- a/core/templates/update_pharmacy_location.html
+++ b/core/templates/update_pharmacy_location.html
@@ -2,7 +2,7 @@
 {% block content %}
 
 <div class="container mt-4">
-    <h2>Update Pharmacy Location</h2>
+    <h1><strong>Update Pharmacy Location</h1>
     <p>Drag the marker to your pharmacy's location or click on the map.</p>
 
     <form method="POST">
@@ -21,7 +21,7 @@
 
         <div id="map" style="height: 400px; margin-top: 10px;"></div>
 
-        <button type="submit" class="btn btn-primary mt-3">Save Location</button>
+        <button type="submit" class="bg-blue-300 hover:bg-green-600 text-white font-semibold py-3 px-6 rounded-lg shadow-lg transition duration-300">Save Location</button>
     </form>
 </div>
 
